2001-12-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu-summary-buffer-name): New
	advice.
	
	* lisp/gnus.el (top): Add autoload of `gnus-namazu-search'.

	* lisp/gnus-sum.el (gnus-summary-mode-map): Define "\C-c\C-n" as
	`gnus-namazu-search'.

	* lisp/gnus-group.el (gnus-group-mode-map): Define "\C-c\C-n" as
	`gnus-namazu-search'.

	* lisp/gnus-namazu.el: New file.

2001-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 06.

2001-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-find-invisible-regions): Look for the
	text-property `mime-edit-invisible' as well as `message-invisible'.
	(message-save-drafts): Copy the text-property `mime-edit-invisible'
	from the message editing buffer to the encoding buffer.
	(message-send): Ditto.

2001-09-27  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* texi/gnus-ja.texi (Article Hiding): Fix typo.

2001-09-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/dgnushack.el: If W3DIR is identical to URLDIR, don't add it
	to `load-path'.

2001-09-17  Keiichi Suzuki  <keiichi@nanap.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/insert-address-regexp):
	`regexp-quote' for each addresses.

2001-09-16  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* texi/gnus-ja.texi (Drafts): Fix typo.

2001-09-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Make a copy
	of the requested article only when the current directory does noe
	equal to `gnus-original-article-buffer'.

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Copy an
	article from `gnus-original-article-buffer' to
	`gnus-article-buffer'.  Generate `gnus-original-article-buffer'
	safely.

2001-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/pop-up-bbdb-buffer): Use
	`bbdb-display-layout' or `bbdb-pop-up-display-layout' instead of
	`bbdb-elided-display' or `bbdb-pop-up-elided-display' when BBDB